src/objects/Apttus__APTS_Agreement__c.object
<CustomObject>
</CustomObject>