src/objects/Apttus__APTS_Agreement__c/fields/Account_Role__c.field-meta.xml
<CustomField>
    <fullName>Account_Role__c</fullName>
    <label>Account Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Alliance Partner</fullName>
            </value>
            <value>
                <fullName>GPP Distributor Partner</fullName>
            </value>
            <value>
                <fullName>GPP SPAAP partner</fullName>
            </value>
            <value>
                <fullName>GPP VAR partner</fullName>
            </value>
            <value>
                <fullName>Industrial partner</fullName>
            </value>
            <value>
                <fullName>Other PSA / Integrator</fullName>
            </value>
            <value>
                <fullName>Project Specific</fullName>
            </value>
            <value>
                <fullName>Disti+SPaaP</fullName>
            </value>
            <value>
                <fullName>Disti+VAR</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>