src/objects/Apttus__APTS_Agreement__c/fields/Apttus__FF_Expire__c.field-meta.xml
<CustomField>
    <fullName>Apttus__FF_Expire__c</fullName>
    <description>Expire the agreement</description>
    <formula>IF (OR(AND(ISPICKVAL(Apttus__Status_Category__c,&quot;In Effect&quot;),NOT(ISPICKVAL(Apttus__Status__c,&quot;Being Amended&quot;)), NOT(ISPICKVAL(Apttus__Status__c,&quot;Being Renewed&quot;)))), HYPERLINK(&quot;/apex/Apttus__AgreementExpire?id=&quot; &amp; Id, IMAGE(&quot;/resource/Apttus__Button_Expire&quot;, &quot;Expire&quot;),&quot;_self&quot;), NULL)</formula>
    <inlineHelpText>Expire the agreement</inlineHelpText>
    <label>Expire</label>
    <type>Text</type>
</CustomField>