src/objects/Apttus__APTS_Agreement__c/fields/CLM_Existing_Contract_Link__c.field-meta.xml
<CustomField>
    <fullName>CLM_Existing_Contract_Link__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Existing Contract Link</label>
    <type>Url</type>
</CustomField>