src/objects/Apttus__APTS_Agreement__c/fields/CLM_Existing_Frame_Contract_Yes_No__c.field-meta.xml
<CustomField>
    <fullName>CLM_Existing_Frame_Contract_Yes_No__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Existing Frame Contract (Yes/No)</label>
    <type>Checkbox</type>
</CustomField>