src/objects/Apttus__APTS_Agreement__c/fields/CLM_Prospect_Account__c.field-meta.xml
<CustomField>
    <fullName>CLM_Prospect_Account__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>If the Prospect/Third Party is not in the system yet, enter the full Legal or Registered Name of the Company​</inlineHelpText>
    <label>Prospect/Third Party Account</label>
    <length>255</length>
    <type>Text</type>
</CustomField>