src/objects/Apttus__APTS_Agreement__c/fields/CLM_Related_Opportunity_Mandatory_Check__c.field-meta.xml
<CustomField>
    <fullName>CLM_Related_Opportunity_Mandatory_Check__c</fullName>
    <formula>IF(
AND(NOT(ISPICKVAL(Apttus__Subtype__c, &quot;Partner Agreement (GPP)&quot;)), NOT(ISPICKVAL(Apttus__Subtype__c, &quot;Amendment&quot;)),RecordType.DeveloperName = &apos;SSA&apos;,
ISBLANK(APTS_Ext_ID__c)), &quot;TRUE&quot;,
IF( AND(ISPICKVAL(Apttus__Subtype__c, &quot;Amendment&quot;), NOT(ISPICKVAL(Apttus__Parent_Agreement__r.Apttus__Subtype__c, &quot;Partner Agreement (GPP)&quot;)),RecordType.DeveloperName = &apos;SSA&apos;,
ISBLANK(APTS_Ext_ID__c)), &quot;TRUE&quot;, &quot;FALSE&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Related Opportunity Mandatory Check</label>
    <type>Text</type>
</CustomField>