src/objects/Apttus__APTS_Agreement__c/fields/CLM_Request_Number__c.field-meta.xml
<CustomField>
    <fullName>CLM_Request_Number__c</fullName>
    <formula>Apttus__FF_Agreement_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Request Number</label>
    <type>Text</type>
</CustomField>