src/objects/Apttus__APTS_Agreement__c/fields/Customer_contact_or_bill_to__c.field-meta.xml
<CustomField>
    <fullName>Customer_contact_or_bill_to__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer contact or bill-to</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Agreements (Contact)</relationshipLabel>
    <relationshipName>Agreements3</relationshipName>
    <type>Lookup</type>
</CustomField>