src/objects/Apttus__APTS_Agreement__c/fields/Dist_Channel__c.field-meta.xml
<CustomField>
    <fullName>Dist_Channel__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Distribution Channel</label>
    <length>255</length>
    <type>Text</type>
</CustomField>