src/objects/Apttus__APTS_Agreement__c/fields/Generate_Custom__c.field-meta.xml
<CustomField>
    <fullName>Generate_Custom__c</fullName>
    <description>Generate Agreement</description>
    <formula>IF (
OR(
AND(
RecordType.DeveloperName &lt;&gt; &apos;NDA&apos;,
ISPICKVAL(Apttus__Status_Category__c, &quot;Request&quot;),
$Permission.CLM_Contract_Manager_Permission,
OR( $User.Id =  OwnerId,
CONTAINS($Label.CLM_Profiles, $Profile.Name))),
 
AND(RecordType.DeveloperName = &apos;NDA&apos;,
ISPICKVAL(Apttus__Status_Category__c, &quot;Request&quot;),
$Permission.CLM_Contract_Manager_Permission,
OR( $User.Id =  OwnerId,
CONTAINS($Label.CLM_Profiles, $Profile.Name)))),

IF(OR($User.UIThemeDisplayed == &apos;Theme4d&apos;, $User.UIThemeDisplayed == &apos;Theme4t&apos;, $User.UIThemeDisplayed == &apos;Theme4u&apos;),
HYPERLINK(&quot;/apex/Apttus__LightningSelectTemplate?id=&quot;&amp;Id &amp; &quot;&amp;action=Generate_Agreement&amp;templateType=Agreement&quot;,
IMAGE(&quot;/resource/Apttus__Button_Generate&quot;, &quot;Generate&quot;),&quot;_self&quot;) , HYPERLINK(&quot;/apex/Apttus__SelectTemplate?id=&quot;&amp;Id &amp; &quot;&amp;action=Generate_Agreement&amp;templateType=Agreement&quot;,
IMAGE(&quot;/resource/Apttus__Button_Generate&quot;, &quot;Generate&quot;),&quot;_self&quot;)), NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Generate Agreement</inlineHelpText>
    <label>Generate_Custom</label>
    <type>Text</type>
</CustomField>