src/objects/Apttus__APTS_Agreement__c/fields/Nokia_Secondary_Legal_Entity__c.field-meta.xml
<CustomField>
    <fullName>Nokia_Secondary_Legal_Entity__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Nokia Secondary Legal Entity</label>
    <length>255</length>
    <type>Text</type>
</CustomField>