src/objects/Apttus__APTS_Agreement__c/fields/Payment_Term_Services__c.field-meta.xml
<CustomField>
    <fullName>Payment_Term_Services__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Payment Term Services</label>
    <length>255</length>
    <type>Text</type>
</CustomField>