src/objects/Apttus__APTS_Agreement__c/recordTypes/Care_Agreement.recordType-meta.xml
<RecordType>
    <fullName>Care_Agreement</fullName>
    <active>true</active>
    <description>Use this for a Care Agreement</description>
    <label>Care Agreement</label>
</RecordType>