src/objects/Apttus__APTS_Agreement__c/recordTypes/ContractRequest.recordType-meta.xml
<RecordType>
    <fullName>ContractRequest</fullName>
    <active>true</active>
    <label>Contract Request</label>
</RecordType>