src/objects/Apttus__APTS_Agreement__c/recordTypes/Frame_Agreement.recordType-meta.xml
<RecordType>
    <fullName>Frame_Agreement</fullName>
    <active>true</active>
    <description>Select this Agreement Type for Digital Privacy Agreement (DPA), Consortium Agreement, Collaboration / Teaming, Letter of Intent (LOI), Memorandum of Understanding (MOU), Trial/Evaluation or NIRA.</description>
    <label>Non-Transactional Agreement</label>
</RecordType>