src/objects/Apttus__APTS_Agreement__c/recordTypes/General.recordType-meta.xml
<RecordType>
    <fullName>General</fullName>
    <active>true</active>
    <label>General</label>
</RecordType>