src/objects/Apttus__APTS_Agreement__c/recordTypes/Legacy.recordType-meta.xml
<RecordType>
    <fullName>Legacy</fullName>
    <active>true</active>
    <description>Agreement Type for Agreements being migrated from Legacy CLM System</description>
    <label>Legacy</label>
</RecordType>