src/objects/Apttus__APTS_Agreement__c/recordTypes/NDA.recordType-meta.xml
<RecordType>
    <fullName>NDA</fullName>
    <active>true</active>
    <label>NDA</label>
</RecordType>