src/objects/Apttus__APTS_Agreement__c/recordTypes/SSA.recordType-meta.xml
<RecordType>
    <fullName>SSA</fullName>
    <active>true</active>
    <description>Use this for a Supply and Services Agreement, for customers of Nokia, Canada</description>
    <label>Supply and Services Agreement</label>
</RecordType>