src/objects/Apttus__APTS_Agreement__c/recordTypes/Transactional_Non_SSA.recordType-meta.xml
<RecordType>
    <fullName>Transactional_Non_SSA</fullName>
    <active>true</active>
    <description>Select this Agreement Type for SOW, Eval, Change Order, Work Order, Other</description>
    <label>Transactional Non SSA</label>
</RecordType>