src/objects/Apttus__APTS_Agreement__c/validationRules/CLM_Confidence_Level_cannot_be_High.validationRule-meta.xml
<ValidationRule>
    <fullName>CLM_Confidence_Level_cannot_be_High</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
NOT(ISNEW()),

 RecordType.Name &lt;&gt; &quot;General&quot;,
ISPICKVAL( Apttus__Status_Category__c ,&quot;In Application&quot;), 

 ISPICKVAL(Confidence_Level__c ,&quot;High Level&quot;), 
OR(
ISBLANK(Apttus__Account__c),
ISBLANK(End_Customer__c),
ISBLANK(Nokia_Legal_Entity_lookup__c),
ISBLANK(TEXT(Execution_category__c)),
ISBLANK(Apttus_CMConfig__PaymentTermId__c),
ISBLANK(TEXT(Apttus_CMConfig__PayoutFrequency__c)),
ISBLANK(TEXT(Inco_Term_Description__c)),
ISBLANK(TEXT(Sales_Mode__c)),
ISBLANK(Apttus__Contract_Start_Date__c),
AND(ISBLANK(Apttus__Contract_End_Date__c), (Apttus__Perpetual__c=False) )))</errorConditionFormula>
    <errorDisplayField>Apttus_CMConfig__ABOType__c</errorDisplayField>
    <errorMessage>Confidence level cannot be &quot;High Level&quot; unless the below fields have data
Account Legal Entity, End customer, Nokia Legal Entity, Execution category,
Payment Term,Payout frequency,Incoterm,Sales Mode,Agreement Start date,Agreement End Date or Evergreen</errorMessage>
</ValidationRule>