src/objects/Apttus__APTS_Agreement__c/validationRules/CLM_Mandatory_fields_When_ERP_is_P20.validationRule-meta.xml
<ValidationRule>
    <fullName>CLM_Mandatory_fields_When_ERP_is_P20</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
NOT(ISNEW()),
 RecordType.Name &lt;&gt; &quot;General&quot;,

 ISPICKVAL(Confidence_Level__c ,&quot;High Level&quot;), 
ISPICKVAL(ERP__c ,&quot;P20&quot;),
OR(
ISBLANK(Nokia_Legal_Entity_lookup__c),
ISBLANK(Nokia_Legal_Entity__c),
ISBLANK(Sales_Org_Number__c),
ISBLANK(Sales_Office_Number__c),
ISBLANK(Sales_Group_Number__c),
ISBLANK(Dist_Channel__c),
ISBLANK(Division__c),
ISBLANK(WBS_Number__c),
ISBLANK(TEXT(Lead_BU__c)))




)</errorConditionFormula>
    <errorMessage>When ERP is P20 the following fields are mandatory: Nokia Legal Entity, Selling Unit Code, Sales Org, Sales Office, Sales Group, Distribution Channel, Division, WBS Number, Lead BU (Alliance format)</errorMessage>
</ValidationRule>