src/objects/Apttus__APTS_Agreement__c/validationRules/CLM_Mandatory_fieldsWhenERPisBlue_Planet.validationRule-meta.xml
<ValidationRule>
    <fullName>CLM_Mandatory_fieldsWhenERPisBlue_Planet</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
NOT(ISNEW()),

RecordType.Name &lt;&gt; &quot;General&quot;,

 ISPICKVAL(Confidence_Level__c ,&quot;High Level&quot;), 

ISPICKVAL(ERP__c ,&quot;Blue Planet&quot;),

OR(
ISBLANK(Nokia_Legal_Entity__c),

ISBLANK(WBS_Number__c),

ISBLANK(Tax_Id_Country__c),

ISBLANK(TEXT(Lead_BU__c)))




)</errorConditionFormula>
    <errorMessage>When ERP is Blue Planet, the following fields are mandatory: Selling Unit Code, WBS Number, Tax ID country, Lead BU (Alliance format)</errorMessage>
</ValidationRule>