src/objects/Apttus__APTS_Agreement__c/validationRules/CLM_NonTransactionalActivationValidation.validationRule-meta.xml
<ValidationRule>
    <fullName>CLM_NonTransactionalActivationValidation</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
RecordType.DeveloperName = &apos;Frame_Agreement&apos;,
ISPICKVAL(Apttus__Status_Category__c,&quot;In Effect&quot;),
OR(
ISBLANK( Name ),
ISBLANK( Agreement_External_Contract_Number__c ),
ISBLANK(  Apttus__Account__c ),
ISBLANK(  Nokia_Legal_Entity_lookup__c ),
ISBLANK(  Apttus__Contract_Start_Date__c ),
ISBLANK(  Apttus__Contract_End_Date__c )
)
)</errorConditionFormula>
    <errorDisplayField>Apttus_CMConfig__ABOType__c</errorDisplayField>
    <errorMessage>Please enter the values below before activating the agreement - 
Customer Agreement Number,
Agreement Name,
Account Legal Entity,
Nokia Legal Entity,
Agreement Start Date,
Agreement End Date</errorMessage>
</ValidationRule>