src/objects/Apttus__APTS_Agreement__c/validationRules/CLM_Related_Opportunity_is_Mandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>CLM_Related_Opportunity_is_Mandatory</fullName>
    <active>true</active>
    <errorConditionFormula>IF( 
AND(NOT(ISPICKVAL(Apttus__Subtype__c, &quot;Partner Agreement (GPP)&quot;)), NOT(ISPICKVAL(Apttus__Subtype__c, &quot;Amendment&quot;)), ISPICKVAL( Apttus__Status_Category__c, &quot;In Effect&quot;),
ISBLANK( Apttus__Related_Opportunity__c ),RecordType.DeveloperName = &apos;SSA&apos;,
ISBLANK(APTS_Ext_ID__c)), TRUE,
IF( AND(ISPICKVAL(Apttus__Subtype__c, &quot;Amendment&quot;), NOT(ISPICKVAL(Apttus__Parent_Agreement__r.Apttus__Subtype__c, &quot;Partner Agreement (GPP)&quot;)), ISPICKVAL( Apttus__Status_Category__c, &quot;In Effect&quot;),
ISBLANK( Apttus__Related_Opportunity__c ),RecordType.DeveloperName = &apos;SSA&apos;,
ISBLANK(APTS_Ext_ID__c)), TRUE, FALSE))</errorConditionFormula>
    <errorDisplayField>Apttus__Related_Opportunity__c</errorDisplayField>
    <errorMessage>Opportunity is required. Please select an opportunity.</errorMessage>
</ValidationRule>