src/objects/Apttus__APTS_Agreement__c/validationRules/CLM_Term_vs_Agreement_End_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>CLM_Term_vs_Agreement_End_Date</fullName>
    <active>false</active>
    <description>Verifies that either Term or Agreement End date are provided on the agreement.</description>
    <errorConditionFormula>AND(ISPICKVAL( Apttus__Status__c , &quot;Fully Signed&quot;), 
 RecordType.Name &lt;&gt; &apos;Legacy&apos;,
ISBLANK(Text(CLM_Term_Years__c)),
ISBLANK(Apttus__Contract_End_Date__c))</errorConditionFormula>
    <errorMessage>Please enter either Term (Years) or Agreement End Date</errorMessage>
</ValidationRule>