src/objects/Apttus__APTS_Agreement__c/validationRules/CLM_TransactionalActivationValidation1.validationRule-meta.xml
<ValidationRule>
    <fullName>CLM_TransactionalActivationValidation1</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
OR(RecordType.DeveloperName = &apos;SSA&apos;,
RecordType.DeveloperName = &apos;Transactional_Non_SSA&apos;,
RecordType.DeveloperName = &apos;Care_Agreement&apos;),

ISPICKVAL(Apttus__Status_Category__c,&quot;In Effect&quot;),

OR(
ISBLANK( Name ),
ISBLANK( Agreement_External_Contract_Number__c ),
ISBLANK(  Apttus__Account__c ),
ISBLANK(  End_Customer__c ),
ISBLANK(  Nokia_Legal_Entity_lookup__c ),
ISBLANK(  Apttus__Related_Opportunity__c ),
ISBLANK( TEXT( Lead_BG__c )),
ISBLANK( TEXT( Sales_Mode__c) ),
ISBLANK(  CLM_Product_Categories__c )
)
)</errorConditionFormula>
    <errorMessage>Please enter the below values before activating the agreement -
Agreement Name,
Customer Agreement Number,
Account Legal Entity,
End Customer,
Nokia Legal Entity,
Related Opportunity,
Lead BG,
Sales Mode,
Product Categories</errorMessage>
</ValidationRule>