src/objects/Apttus__APTS_Agreement__c/validationRules/CLM_TransactionalActivationValidation2.validationRule-meta.xml
<ValidationRule>
    <fullName>CLM_TransactionalActivationValidation2</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
OR(RecordType.DeveloperName = &apos;SSA&apos;,
RecordType.DeveloperName = &apos;Transactional_Non_SSA&apos;,
RecordType.DeveloperName = &apos;Care_Agreement&apos;),

ISPICKVAL(Apttus__Status_Category__c,&quot;In Effect&quot;),
OR(

ISBLANK(  TEXT(Execution_category__c) ),
ISBLANK(  SW_business_type__c ),
ISBLANK(  Other_business_type__c ),
ISBLANK(  Apttus__Contract_Start_Date__c ),
ISBLANK(  Apttus__Contract_End_Date__c ),
ISBLANK(  TEXT(Apttus_CMConfig__PayoutFrequency__c) ),
ISBLANK(  TEXT( CLM_Payment_Term__c ) ),
ISBLANK(  TEXT(Inco_Term_Description__c) ),
ISBLANK(  Place_or_delivery_shipment__c )
)
)</errorConditionFormula>
    <errorDisplayField>Apttus_CMConfig__ABOType__c</errorDisplayField>
    <errorMessage>Please enter the below values before activating the agreement
Execution Category,
SW Business Type,
Other Business Type,
Agreement Start Date,
Agreement End Date,
Payout Frequency,
Payment Term,
Incoterm,
Place of delivery/shipment</errorMessage>
</ValidationRule>