src/objects/Apttus__APTS_Agreement__c/listViews/Agreements_for_OE.listView-meta.xml
<ListView>
    <fullName>Agreements_for_OE</fullName>
    <booleanFilter>(1 OR 2 OR 3 OR 4 OR 5 OR 6 OR 7 OR 8)</booleanFilter>
    <columns>NAME</columns>
    <columns>Agreement_External_Contract_Number__c</columns>
    <columns>Apttus__Account__c</columns>
    <columns>Apttus__Status_Category__c</columns>
    <columns>ERP__c</columns>
    <columns>Inco_Term_Description__c</columns>
    <columns>Apttus_CMConfig__PaymentTermId__c</columns>
    <columns>Nokia_Legal_Entity_lookup__c</columns>
    <columns>Nokia_Legal_Entity__c</columns>
    <columns>Lead_BU__c</columns>
    <columns>Tax_Id_Country__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Apttus__Account__c</field>
        <operation>equals</operation>
        <value>SFR</value>
    </filters>
    <filters>
        <field>Apttus__Account__c</field>
        <operation>equals</operation>
        <value>SFR Comptabilite Fournisseurs</value>
    </filters>
    <filters>
        <field>Apttus__Account__c</field>
        <operation>equals</operation>
        <value>Pan Dacom NETWORKING AG</value>
    </filters>
    <filters>
        <field>Apttus__Account__c</field>
        <operation>equals</operation>
        <value>Altice France</value>
    </filters>
    <filters>
        <field>Apttus__Account__c</field>
        <operation>equals</operation>
        <value>COMPLETEL SAS</value>
    </filters>
    <filters>
        <field>Apttus__Account__c</field>
        <operation>equals</operation>
        <value>IRISE SA</value>
    </filters>
    <filters>
        <field>Apttus__Account__c</field>
        <operation>equals</operation>
        <value>TELEFONICA UK LTD</value>
    </filters>
    <filters>
        <field>Apttus__Account__c</field>
        <operation>contains</operation>
        <value>ORANGE SLOVENSKO</value>
    </filters>
    <label>Agreements for OE</label>
</ListView>