src/objects/Apttus__APTS_Agreement__c/listViews/CLM_All_Contract_Requests.listView-meta.xml
<ListView>
    <fullName>CLM_All_Contract_Requests</fullName>
    <columns>NAME</columns>
    <columns>Apttus__FF_Agreement_Number__c</columns>
    <columns>Apttus__Account__c</columns>
    <columns>Apttus__Related_Opportunity__c</columns>
    <columns>Apttus__Requestor__c</columns>
    <columns>Apttus__Request_Date__c</columns>
    <columns>Apttus__Status_Category__c</columns>
    <columns>Apttus__Status__c</columns>
    <columns>Apttus__Total_Contract_Value__c</columns>
    <columns>Lead_BG__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>OWNER.LAST_NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Apttus__APTS_Agreement__c.ContractRequest</value>
    </filters>
    <label>All Contract Requests</label>
</ListView>