src/objects/Apttus__APTS_Agreement__c/listViews/CLM_My_Agreements.listView-meta.xml
<ListView>
    <fullName>CLM_My_Agreements</fullName>
    <columns>NAME</columns>
    <columns>Apttus__FF_Agreement_Number__c</columns>
    <columns>Apttus__Account__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>Apttus__Subtype__c</columns>
    <columns>Apttus__Status_Category__c</columns>
    <columns>Apttus__Status__c</columns>
    <columns>Apttus__Contract_End_Date__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>notEqual</operation>
        <value>Apttus__APTS_Agreement__c.ContractRequest</value>
    </filters>
    <label>My Agreements</label>
</ListView>