src/objects/Apttus__APTS_Agreement__c/listViews/CLM_My_Contract_Requests.listView-meta.xml
<ListView>
    <fullName>CLM_My_Contract_Requests</fullName>
    <columns>NAME</columns>
    <columns>Apttus__FF_Agreement_Number__c</columns>
    <columns>Apttus__Account__c</columns>
    <columns>Apttus__Related_Opportunity__c</columns>
    <columns>Apttus__Requestor__c</columns>
    <columns>Apttus__Request_Date__c</columns>
    <columns>CLM_Contract_Request_Type__c</columns>
    <columns>Apttus__Total_Contract_Value__c</columns>
    <columns>Lead_BG__c</columns>
    <columns>Apttus__Status_Category__c</columns>
    <columns>Apttus__Status__c</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>Apttus__Parent_Agreement__c</columns>
    <columns>Nokia_Legal_Entity_lookup__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Apttus__APTS_Agreement__c.ContractRequest,Apttus__APTS_Agreement__c.NDA</value>
    </filters>
    <filters>
        <field>CLM_Is_Req_Login_User__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>My Contract Requests</label>
    <language>en_US</language>
</ListView>