src/objects/Apttus__APTS_Agreement__c/listViews/CLM_NDA_Helpdesk_APTS_Agreement.listView-meta.xml
<ListView>
    <fullName>CLM_NDA_Helpdesk_APTS_Agreement</fullName>
    <columns>NAME</columns>
    <columns>Apttus__FF_Agreement_Number__c</columns>
    <columns>Apttus__Account__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>Apttus__Subtype__c</columns>
    <columns>Apttus__Status_Category__c</columns>
    <columns>Apttus__Status__c</columns>
    <columns>Apttus__Contract_End_Date__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Queue</filterScope>
    <label>NDA Helpdesk</label>
    <queue>CLM_NDA_Helpdesk</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>