src/objects/Apttus__APTS_Agreement__c/listViews/Legacy_Agreements_APJ_Fully_Signed.listView-meta.xml
<ListView>
    <fullName>Legacy_Agreements_APJ_Fully_Signed</fullName>
    <columns>NAME</columns>
    <columns>Apttus__FF_Agreement_Number__c</columns>
    <columns>Apttus__Subtype__c</columns>
    <columns>Apttus__Account__c</columns>
    <columns>Apttus__Status_Category__c</columns>
    <columns>Apttus__Status__c</columns>
    <columns>Agreement_Reference__c</columns>
    <columns>Apttus__Contract_Start_Date__c</columns>
    <columns>Apttus__Contract_End_Date__c</columns>
    <columns>Apttus__Perpetual__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>OWNER.LAST_NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Apttus__APTS_Agreement__c.Legacy</value>
    </filters>
    <filters>
        <field>APTS_Ext_ID__c</field>
        <operation>notEqual</operation>
    </filters>
    <filters>
        <field>Apttus__Status__c</field>
        <operation>equals</operation>
        <value>Fully Signed</value>
    </filters>
    <filters>
        <field>CLM_Account_Region__c</field>
        <operation>equals</operation>
        <value>Market Asia Pacific &amp; Japan</value>
    </filters>
    <label>Legacy Agreements -APJ - Fully Signed</label>
</ListView>