src/objects/Apttus__APTS_Agreement__c/listViews/Legacy_Agreements_Pilot_LAT.listView-meta.xml
<ListView>
    <fullName>Legacy_Agreements_Pilot_LAT</fullName>
    <booleanFilter>1 AND 2 AND 3 AND (4 OR 5 OR 6 or 7)</booleanFilter>
    <columns>NAME</columns>
    <columns>Apttus__FF_Agreement_Number__c</columns>
    <columns>Apttus__Subtype__c</columns>
    <columns>Apttus__Account__c</columns>
    <columns>Apttus__Status_Category__c</columns>
    <columns>Apttus__Status__c</columns>
    <columns>Agreement_Reference__c</columns>
    <columns>Apttus__Contract_Start_Date__c</columns>
    <columns>Apttus__Contract_End_Date__c</columns>
    <columns>Apttus__Perpetual__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>APTS_Ext_ID__c</field>
        <operation>notEqual</operation>
    </filters>
    <filters>
        <field>Apttus__Status__c</field>
        <operation>equals</operation>
        <value>Activated,Fully Signed</value>
    </filters>
    <filters>
        <field>CLM_Account_Region__c</field>
        <operation>equals</operation>
        <value>Market Europe</value>
    </filters>
    <filters>
        <field>Apttus__Account__c</field>
        <operation>startsWith</operation>
        <value>Virgin Media</value>
    </filters>
    <filters>
        <field>Apttus__Account__c</field>
        <operation>startsWith</operation>
        <value>Vodafone Italia</value>
    </filters>
    <filters>
        <field>Apttus__Account__c</field>
        <operation>startsWith</operation>
        <value>HUTCHISON 3G</value>
    </filters>
    <filters>
        <field>Comments__c</field>
        <operation>contains</operation>
        <value>POLKOMTEL</value>
    </filters>
    <label>Legacy Agreements (Pilot) - Europe</label>
    <sharedTo>
        <group>CLM_GSS_Legal_Group</group>
    </sharedTo>
</ListView>