src/objects/Apttus__APTS_Agreement__c/listViews/Legacy_Agreements_Pilot_Vodafone.listView-meta.xml
<ListView>
    <fullName>Legacy_Agreements_Pilot_Vodafone</fullName>
    <columns>NAME</columns>
    <columns>Apttus__FF_Agreement_Number__c</columns>
    <columns>Apttus__Subtype__c</columns>
    <columns>Apttus__Account__c</columns>
    <columns>Apttus__Status_Category__c</columns>
    <columns>Apttus__Status__c</columns>
    <columns>Agreement_Reference__c</columns>
    <columns>Apttus__Contract_Start_Date__c</columns>
    <columns>Apttus__Contract_End_Date__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>OWNER.LAST_NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Apttus__APTS_Agreement__c.Care_Agreement,Apttus__APTS_Agreement__c.Legacy,Apttus__APTS_Agreement__c.Frame_Agreement,Apttus__APTS_Agreement__c.SSA</value>
    </filters>
    <filters>
        <field>APTS_Ext_ID__c</field>
        <operation>notEqual</operation>
    </filters>
    <filters>
        <field>Comments__c</field>
        <operation>contains</operation>
        <value>Vodafone</value>
    </filters>
    <label>Legacy Agreements (Pilot) - Vodafone</label>
    <sharedTo>
        <group>CLM_GSS_Legal_Group</group>
    </sharedTo>
</ListView>