src/objects/Apttus__APTS_Agreement__c/listViews/NAM_ENT_CT_US_APTS_Agreement.listView-meta.xml
<ListView>
    <fullName>NAM_ENT_CT_US_APTS_Agreement</fullName>
    <filterScope>Queue</filterScope>
    <label>NAM ENT CT US</label>
    <queue>NAM_ENT_CT_US</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>